--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
               </li>
                 {% if request.user.is_authenticated %}
               <li class="nav-item">
-                    <a class="nav-link" href="{% url 'polls:list' %}">Polls</a>
+                    <a class="nav-link" href="{% url 'polls:list' %}">Pollss</a>
               </li>
                 {% endif %}
           </ul>
@@ -21,8 +21,8 @@
                   <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
               </li>
             {% else %}
-                <a class="nav-link" href="{% url 'users:login' %}">SignIn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUp</a>
+                <a class="nav-link" href="{% url 'users:login' %}">SignInn</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUpppp</a>
             {% endif %}
   
           </ul>
