add some changes

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
               </li>
                 {% if request.user.is_authenticated %}
               <li class="nav-item">
-                    <a class="nav-link" href="{% url 'polls:list' %}">Pollss</a>
+                    <a class="nav-link" href="{% url 'polls:list' %}">Pollssss</a>
               </li>
                 {% endif %}
           </ul>
