add some changes

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
               </li>
             {% else %}
                 <a class="nav-link" href="{% url 'users:login' %}">SignInn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUpppp</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUppp</a>
             {% endif %}
   
           </ul>
