--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
               </li>
                 {% if request.user.is_authenticated %}
               <li class="nav-item">
-                    <a class="nav-link" href="{% url 'polls:list' %}">Pollssss</a>
+                    <a class="nav-link" href="{% url 'polls:list' %}">Pollssssss</a>
               </li>
                 {% endif %}
           </ul>
@@ -22,7 +22,7 @@
               </li>
             {% else %}
                 <a class="nav-link" href="{% url 'users:login' %}">SignInn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUppp</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUpppp</a>
             {% endif %}
   
           </ul>
