--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,8 +21,8 @@
                   <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
               </li>
             {% else %}
-                <a class="nav-link" href="{% url 'users:login' %}">SignInnn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUppp</a>
+                <a class="nav-link" href="{% url 'users:login' %}">SignInnnn</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUpppn</a>
             {% endif %}
   
           </ul>
