--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
               </li>
             {% else %}
                 <a class="nav-link" href="{% url 'users:login' %}">SignInnnn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUpppn</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUpw</a>
             {% endif %}
   
           </ul>
