--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <nav class="navbar navbar-expand-md navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Polls-Application</a>
+      <a class="navbar-brand" href="#">Polls-Applicationnnnn</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
       </button>
