--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <nav class="navbar navbar-expand-md navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Polls-Applicationnnnn</a>
+      <a class="navbar-brand" href="#">Polls-Applicationn</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -11,7 +11,7 @@
               </li>
                 {% if request.user.is_authenticated %}
               <li class="nav-item">
-                    <a class="nav-link" href="{% url 'polls:list' %}">Pollssssss</a>
+                    <a class="nav-link" href="{% url 'polls:list' %}">Poll</a>
               </li>
                 {% endif %}
           </ul>
@@ -21,8 +21,8 @@
                   <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
               </li>
             {% else %}
-                <a class="nav-link" href="{% url 'users:login' %}">SignInnnn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUpw</a>
+                <a class="nav-link" href="{% url 'users:login' %}">SignInn</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUpww</a>
             {% endif %}
   
           </ul>
