--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,8 +21,8 @@
                   <a class="nav-link" href="{% url 'users:logout' %}">Logout</a>
               </li>
             {% else %}
-                <a class="nav-link" href="{% url 'users:login' %}">SignInn</a>
-                <a class="nav-link" href="{% url 'users:register' %}">SignUpww</a>
+                <a class="nav-link" href="{% url 'users:login' %}">SignI</a>
+                <a class="nav-link" href="{% url 'users:register' %}">SignUp</a>
             {% endif %}
   
           </ul>
