--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col">
             <div id="home-content">
-                <h1>Polling- Get Started here! Gopal Ghule..!</h1>
+                <h1>Polling- Get Started here! Gopal Ghule..argocd...!</h1>
                 <hr>
                 <a class="btn btn-light btn-lg" href="{% url 'polls:list' %}" role="button">
                     click Here TO Get Started !</a>
